<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/fish_ranking_explanation_title"
            android:textStyle="bold"
            android:textSize="@dimen/second_header_text_size"
            android:id="@+id/rank_explanation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TableLayout
            android:layout_below="@id/rank_explanation_title"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/happy_fish"
                    android:contentDescription="@string/fish_image_description" >
                </ImageView>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/happy_fish_explanation">
                </TextView>
            </TableRow>
            <TableRow
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ok_fish"
                    android:contentDescription="@string/fish_image_description" >
                </ImageView>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ok_fish_explanation">
                </TextView>
            </TableRow>
            <TableRow
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:id="@+id/fish_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sad_fish"
                    android:contentDescription="@string/fish_image_description" >
                </ImageView>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sad_fish_explanation">
                </TextView>
            </TableRow>
        </TableLayout>
    </RelativeLayout>


</ScrollView>