<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context="com.theapp.whichfishthisfishliteversion.DisplayFishDetailActivity$PlaceholderFragment">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/top_info"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            >
            <RelativeLayout
                android:id="@+id/fishNameDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:text="@string/fish_name"
                    android:id="@+id/fish_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold"/>
                <TextView
                    android:text="@string/available_at"
                    android:id="@+id/fish_seasonal"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fish_name"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/fish_image"
                android:padding="@dimen/basic_padding"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/fish_image_description" />
            <!--<TextView
                android:id="@+id/copyright"
                android:clickable="true"
                android:layout_marginLeft="2dp"
                android:focusable="true"
                android:onClick="loadCopyright"
                android:layout_toRightOf="@id/fish_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\u00A9"/>-->
        </LinearLayout>

        <RelativeLayout
            android:layout_below="@id/top_info"
            android:layout_width="wrap_content"
            android:padding="@dimen/basic_padding"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/sad_fish"
                    android:id="@+id/fish_drawable"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/indent_margin"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fish_rank_description" />
                <TextView
                    android:id="@+id/overviewValue"
                    android:textStyle="bold"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_toRightOf="@id/fish_drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>

            <TableLayout
                android:layout_below="@id/overview"
                android:paddingTop="@dimen/basic_padding"
                android:id="@+id/population_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow
                    android:paddingTop="@dimen/table_row_padding_top"
                    android:paddingBottom="@dimen/table_row_padding_bottom">
                    <TextView
                        android:text="@string/population"
                        android:textSize="@dimen/standard_text_size"
                        android:textStyle="bold"
                        android:id="@+id/populationLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/populationValue"
                        android:textSize="@dimen/standard_text_size"
                        android:layout_marginLeft="@dimen/table_row_info_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow
                    android:paddingTop="@dimen/table_row_padding_top"
                    android:paddingBottom="@dimen/table_row_padding_bottom">
                    <TextView
                        android:text="@string/fishing_rate"
                        android:textSize="@dimen/standard_text_size"
                        android:textStyle="bold"
                        android:id="@+id/fishingRateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/fishingValue"
                        android:textSize="@dimen/standard_text_size"
                        android:layout_marginLeft="@dimen/table_row_info_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow
                    android:paddingTop="@dimen/table_row_padding_top"
                    android:paddingBottom="@dimen/table_row_padding_bottom">
                    <TextView
                        android:text="@string/impact_on_habitat"
                        android:textSize="@dimen/standard_text_size"
                        android:textStyle="bold"
                        android:id="@+id/habitatLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/habitatValue"
                        android:textSize="@dimen/standard_text_size"
                        android:layout_marginLeft="@dimen/table_row_info_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow
                    android:paddingTop="@dimen/table_row_padding_top"
                    android:paddingBottom="@dimen/table_row_padding_bottom">
                    <TextView
                        android:text="@string/fishing_effects"
                        android:textSize="@dimen/standard_text_size"
                        android:textStyle="bold"
                        android:id="@+id/bycatchLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/bycatchValue"
                        android:textSize="@dimen/standard_text_size"
                        android:layout_marginLeft="@dimen/table_row_info_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow
                    android:paddingTop="@dimen/table_row_padding_top"
                    android:paddingBottom="@dimen/table_row_padding_bottom">
                    <TextView
                        android:textSize="@dimen/standard_text_size"
                        android:text="@string/sources"
                        android:textStyle="bold"
                        android:id="@+id/sourcesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="@dimen/standard_text_size"
                        android:id="@+id/sourcesValue"
                        android:layout_marginLeft="@dimen/table_row_info_margin_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
